# WhispererEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.py  dbconfig.json  test.sh
cards/: Azar.py  Flintling.py
include/Game/: Board.h  Card.h  Container.h  Effect.h  Event.h  Game.h  Mana.h  Modifier.h  Player.h
include/Game/Card/: Constant.h  Creature.h  Spell.h
include/Game/Container/: CreatureZone.h  Deck.h  Graveyard.h  Hand.h
include/Game/Core/: Action.h  Affect.h  Board.h  Card.h  Container.h  Effect.h  Event.h  Exportable.h  Game.h  Mana.h  Modifier.h  Player.h  Taggable.h
include/Game/Core/Containers/: Deck.h  Hand.h
include/Game/Derived/: Constant.h  Creature.h  Spell.h
include/Game/Derived/Action/GameActions/: DeadAction.h  DrawAction.h
include/Game/Derived/Action/PlayerActions/: AttackAction.h  PlayAction.h
include/Game/Derived/Card/: Constant.h  Creature.h  Spell.h
include/Game/Derived/Containers/: CreatureZone.h  Deck.h  Graveyard.h  Hand.h
include/Game/Derived/Effect/: AuraEffect.h  TriggerEffect.h
include/Game/Derived/Event/GameEvents/: DeadEvent.h  DrawEvent.h  EndTurnEvent.h  StartEvent.h  StartGameEvent.h  StartTurnEvent.h
include/Game/Derived/Event/PlayerEvents/: AttackEvent.h  DamageEvent.h  DestroyEvent.h  DrawEvent.h  HealEvent.h  PlayCardEvent.h  PlayEvent.h  PlayerAttackedEvent.h  SelectionEvent.h
include/Game/Event/Game/: CreatureDestroyedEvent.h  EndGameEvent.h  EndTurnEvent.h  StartGameEvent.h  StartTurnEvent.h
include/Game/Event/Player/: CreatureAttackedEvent.h  DrawEvent.h  PlayCardEvent.h  PlayerAttackedEvent.h
include/Game/Factory/: Factory.h
include/Game/Python/: Factory.h  Module.h  Version.h
include/Game/PythonInterface/: Converter.h  Factory.h
include/Game/Utilities/: Database.h  Exportable.h  Taggable.h
include/Game/Utility/: Action.h  Affect.h  Mana.h
include/Network/: Client.h  HTTPRequest.h  Message.h  Server.h
include/Network/Derived/: AuthMessage.cpp  AuthMessage.h  CardMovedMessage.h  ChatMessage.h  EndTurnMessage.h  QueueMessage.h  StartGameMessage.h
include/Network/Exceptions/: JSONError.h
include/Network/Message/: CardMovedMessage.h  DrawMessage.h  FightPlayerMessage.h  PlayCardMessage.h  PlayerAttackedMessage.h  StartGameMessage.h  StartTurnMessage.h
include/Network/Request/Game/: ChatMessage.h  FightCreatureMessage.h  FightPlayerMessage.h  PlayCardMessage.h
include/Network/Request/Lobby/: AuthMessage.h  QueueMessage.h
include/Network/Response/Game/: CardMovedMessage.h  CreatureAttackedMessage.h  DrawMessage.h  EndGameMessage.h  EndTurnMessage.h  PlayerAttackedMessage.h  StartGameMessage.h  StartTurnMessage.h
libs/: CMakeLists-pybind11.txt
libs/asio/: CMakeLists.txt
libs/catch/: CMakeLists.txt
libs/json/: CMakeLists.txt
libs/pybind11/: .gitignore  CMakeLists.txt
libs/rapidjson/: CMakeLists.txt
src/: PythonModule.cpp  WhispererEngine.cpp
src/Game/: Board.cpp  Card.cpp  Container.cpp  Effect.cpp  Event.cpp  Game.cpp  Mana.cpp  Modifier.cpp  Player.cpp
src/Game/Card/: Constant.cpp  Creature.cpp  Spell.cpp
src/Game/Container/: CreatureZone.cpp  Deck.cpp  Graveyard.cpp  Hand.cpp
src/Game/Core/: Action.cpp  Affect.cpp  Board.cpp  Card.cpp  Container.cpp  Effect.cpp  Event.cpp  Exportable.cpp  Game.cpp  Mana.cpp  Modifier.cpp  Player.cpp  Taggable.cpp
src/Game/Core/Containers/: Deck.cpp  Hand.cpp
src/Game/Derived/: Constant.cpp  Creature.cpp  Spell.cpp
src/Game/Derived/Action/GameActions/: DeadAction.cpp  DrawAction.cpp
src/Game/Derived/Action/PlayerActions/: AttackAction.cpp  PlayAction.cpp
src/Game/Derived/Card/: Constant.cpp  Creature.cpp  Spell.cpp
src/Game/Derived/Containers/: CreatureZone.cpp  Deck.cpp  Graveyard.cpp  Hand.cpp
src/Game/Derived/Effect/: AuraEffect.cpp  TriggerEffect.cpp
src/Game/Derived/Event/GameEvents/: DeadEvent.cpp  DrawEvent.cpp  EndTurnEvent.cpp  StartEvent.cpp  StartGameEvent.cpp  StartTurnEvent.cpp
src/Game/Derived/Event/PlayerEvents/: AttackEvent.cpp  DamageEvent.cpp  DestroyEvent.cpp  DrawEvent.cpp  HealEvent.cpp  (+4 more)
src/Game/Event/Game/: CreatureDestroyedEvent.cpp  EndGameEvent.cpp  EndTurnEvent.cpp  StartGameEvent.cpp  StartTurnEvent.cpp
src/Game/Event/Player/: CreatureAttackedEvent.cpp  DrawEvent.cpp  PlayCardEvent.cpp  PlayerAttackedEvent.cpp
src/Game/Factory/: Factory.cpp
src/Game/Python/: Factory.cpp  Module.cpp  Version.cpp
src/Game/PythonInterface/: Converter.cpp  Factory.cpp
src/Game/Utilities/: Database.cpp  Exportable.cpp  Taggable.cpp
src/Game/Utility/: Action.cpp  Affect.cpp  Mana.cpp
src/Network/: Client.cpp  HTTPRequest.cpp  Message.cpp  Server.cpp
src/Network/Derived/: AuthMessage.cpp  CardMovedMessage.cpp  ChatMessage.cpp  DrawMessage.cpp  EndTurnMessage.cpp  FightPlayerMessage.cpp  PlayCardMessage.cpp  PlayerAttackedMessage.cpp  QueueMessage.cpp  StartGameMessage.cpp  StartTurnMessage.cpp
src/Network/Exceptions/: JSONError.cpp
src/Network/Messsage/: AuthMessage.cpp  CardMovedMessage.cpp  ChatMessage.cpp  DrawMessage.cpp  EndTurnMessage.cpp  FightPlayerMessage.cpp  PlayCardMessage.cpp  PlayerAttackedMessage.cpp  QueueMessage.cpp  StartGameMessage.cpp  StartTurnMessage.cpp
src/Network/Request/Game/: ChatMessage.cpp  FightCreatureMessage.cpp  FightPlayerMessage.cpp  PlayCardMessage.cpp
src/Network/Request/Lobby/: AuthMessage.cpp  QueueMessage.cpp
src/Network/Response/Game/: CardMovedMessage.cpp  CreatureAttackedMessage.cpp  DrawMessage.cpp  EndGameMessage.cpp  EndTurnMessage.cpp  PlayerAttackedMessage.cpp  StartGameMessage.cpp  StartTurnMessage.cpp
test/: CMakeLists.txt
test/libs/googletest/: CMakeLists.txt
test/src/Game/Core/: Card_test.cpp
tests/: CatchMain.cpp
tests/Game/: test_Card.cpp  test_Player.cpp
tests/Game/Card/: test_Creature.cpp
tests/Game/Core/: testCard.py  testConstant.py  testCreature.py  test_Card.cpp  test_Player.cpp
tests/Game/Derived/: test_Creature.cpp
tests/Game/Python/: test_Factory.cpp  test_Integration.cpp
tests/Game/Utilities/: test_Database.cpp
tests/Network/: test_Client.cpp  test_HTTPRequest.cpp  test_Message.cpp
